# getxkblayout-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debug.sh  meson.build  release.sh
.zed/: debug.json
src/: XAdapter.cpp  XAdapter.hpp  getxkblayout.cpp
